--- a/index.html
+++ b/index.html
@@ -198,7 +198,9 @@
       <a class="wa-icon" target="_blank" id="waLink1" title="Share on WhatsApp"></a>
     </div>
 
-    <div class="footer">💤 23–25 June 2025 | Evening ♡ Online Sessions</div>
+    <div class="footer">💤 23–25 June 2025 | Evening ♡ Online Sessions <br>
+ॐ  | Jai Guru Dev | ॐ
+</div>
   </div>
 
   <!-- Card 2 -->
