<br> ॐ  | Jai Guru Dev | ॐ

--- a/index.html
+++ b/index.html
@@ -242,7 +242,9 @@
       <a class="wa-icon" target="_blank" id="waLink2" title="Share on WhatsApp"></a>
     </div>
 
-    <div class="footer">🦦🤌🏻 Starts 25 July 2025 | Bangalore ♡ Ashram</div>
+    <div class="footer">🦦🤌🏻 Starts 25 July 2025 | Bangalore ♡ Ashram <br>
+ॐ  | Jai Guru Dev | ॐ
+</div>
   </div>
 
   <!-- Card 3 -->
@@ -272,7 +274,9 @@
       <a class="wa-icon" target="_blank" id="waLink3" title="Share on WhatsApp"></a>
     </div>
 
-    <div class="footer">🧘🏻‍♂️ 3 days only | Pick a Week | ♡ Online Sessions</div>
+    <div class="footer">🧘🏻‍♂️ 3 days only | Pick a Week | ♡ Online Sessions <br>
+ॐ  | Jai Guru Dev | ॐ
+</div>
   </div>
 
   <script>
