--- a/index.html
+++ b/index.html
@@ -249,16 +249,16 @@
 
   <!-- Card 3 -->
   <div class="iphone-frame">
-    <h1>Weekly</h1>
+    <h1>Weekly,</h1>
     <h2>Online</h2>
     <p class="subtitle">with Vishal Merani</p>
     <h3>Lapse into meditation in minutes</h3>
     <p class="subtitle">Feel Good 😌 Live Light 🪶</p>
 
     <ul class="features">
-      <li>Personal</li>
-      <li>Customized</li>
-      <li>Yours</li>
+      <li>⤷ Personal</li>
+      <li>⤷ Customized</li>
+      <li>⤷ Yours</li>
     </ul>
 
     <ul class="timeline">
