--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
       <a class="wa-icon" target="_blank" id="waLink3" title="Share on WhatsApp"></a>
     </div>
 
-    <div class="footer">🧘🏻‍♂️ 3 days only | Pick a Week | ♡ Online Sessions <br>
+    <div class="footer"> 😌 3 days only | Pick a Week | ♡ Online Sessions <br>
 ॐ  | Jai Guru Dev | ॐ
 </div>
   </div>
