--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
     </div>
 
     <div class="footer">💤 23–25 June 2025 | Evening ♡ Online Sessions <br>
-ॐ  | Jai Guru Dev | ॐ
+ॐ  Jai Guru Dev ॐ
 </div>
   </div>
 
@@ -243,7 +243,7 @@
     </div>
 
     <div class="footer">🦦🤌🏻 Starts 25 July 2025 | Bangalore ♡ Ashram <br>
-ॐ  | Jai Guru Dev | ॐ
+ॐ  Jai Guru Dev ॐ
 </div>
   </div>
 
@@ -275,7 +275,7 @@
     </div>
 
     <div class="footer"> 😌 3 days only | Pick a Week | ♡ Online Sessions <br>
-ॐ  | Jai Guru Dev | ॐ
+ॐ  Jai Guru Dev ॐ
 </div>
   </div>
 
