--- a/index.html
+++ b/index.html
@@ -279,6 +279,66 @@
 </div>
   </div>
 
+
+
+  <!-- Card 4 -->
+  <div class="iphone-frame">
+    <h1>Scanning,</h1>
+    <h2>KaalGyaan Sessionse</h2>
+    <p class="subtitle">with Vishal Merani</p>
+    <h3>Get to know now, like never before</h3>
+    <p class="subtitle">  from different dimension for better decisions in life</p>
+
+    <ul class="features">
+      <li>⤷ Answers about you</li>
+      <li>⤷ Knowing about you</li>
+      <li>⤷ Guiding your next step</li>
+    </ul>
+
+    <ul class="timeline">
+      <li> Leave a note, few days in advance </li>
+      <li><strong>📍 Zoom | Online</strong></li>
+    </ul>
+
+    <h4>Immediate help @ https://kaalgyan.artofliving.org/ </h4>
+
+    <div class="copy-box">
+      <input class="copy-input" type="text" value="Scanning sessions at your convenience 9818503888" id="copyText3" readonly>
+      <button class="copy-btn" onclick="copyToClipboard('copyText3', this)">Copy</button>
+      <a class="wa-icon" target="_blank" id="waLink3" title="Share on WhatsApp"></a>
+    </div>
+
+    <div class="footer"> ♡ Online & Offline Sessions <br>
+ॐ  Jai Guru Dev ॐ
+</div>
+  </div>
+
+
+  <!-- Card 5 -->
+  <div class="iphone-frame">
+    <h1>Pain Management,</h1>
+    <h2>L&B Sessions</h2>
+    <p class="subtitle">with Vishal Merani</p>
+    <h3>Get relief in an hour or so</h3>
+
+    <ul class="timeline">
+      <li> Leave a note, few days in advance </li>
+      <li><strong>📍 In-person, Bangalore Ashram </strong></li>
+    </ul>
+
+    <h4>For Bookings, reach out via team +91 9818503888 </h4>
+
+    <div class="copy-box">
+      <input class="copy-input" type="text" value=" L&B Session Scheduling, In person  Help: 9818503888" id="copyText3" readonly>
+      <button class="copy-btn" onclick="copyToClipboard('copyText3', this)">Copy</button>
+      <a class="wa-icon" target="_blank" id="waLink3" title="Share on WhatsApp"></a>
+    </div>
+
+    <div class="footer"> ♡  Offline Sessions Only <br>
+ॐ  Jai Guru Dev ॐ
+</div>
+  </div>
+  
   <script>
     function copyToClipboard(id, btn) {
       const input = document.getElementById(id);
