--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
   <!-- Card 4 -->
   <div class="iphone-frame">
     <h1>Scanning,</h1>
-    <h2>KaalGyaan Sessionse</h2>
+    <h2>KaalGyaan Sessions</h2>
     <p class="subtitle">with Vishal Merani</p>
     <h3>Get to know now, like never before</h3>
     <p class="subtitle">  from different dimension for better decisions in life</p>
