--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
       <li><strong>📍 Zoom | Online</strong></li>
     </ul>
 
-    <h4>Immediate help @ https://kaalgyan.artofliving.org/ </h4>
+    <a href="https://kaalgyan.artofliving.org/" class="button" target="_blank">Immediate Scanning Sessions, check here</a>
 
     <div class="copy-box">
       <input class="copy-input" type="text" value="Scanning sessions at your convenience 9818503888" id="copyText3" readonly>
