28-30June Sahaj index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     body {
       font-family: 'Inter', sans-serif;
       background: var(--bg);
-      color: var(--text);
+      color: var(--text); 
       padding: 22px 14px;
     }
 
@@ -263,6 +263,8 @@
 
     <ul class="timeline">
       <li>Happening every week</li>
+
+    <a href="https://www.artofliving.org/in-en/program/883701/" class="button" target="_blank">28–30,June Register here</a>
       <li><strong>📍 Zoom | Online</strong></li>
     </ul>
 
