--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
     <p class="subtitle">with Vishal Merani</p>
     <h3>Lapse into meditation in minutes</h3>
     <p class="subtitle">Feel Good 😌 Live Light 🪶</p>
-    <a href="https://www.artofliving.org/in-en/program/883701/" class="button" target="_blank">28–30,June Register here</a>
+    <a href="https://www.artofliving.org/in-en/program/883701/" class="button" target="_blank">June 28-30, Register here</a>
     <ul class="features">
       <li>⤷ Personal</li>
       <li>⤷ Customized</li>
