dates changes -sahaj n dsn

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     <h3>Stress, Sleep, Anxiety</h3>
     <p class="subtitle">Stop struggling! Decode and conquer</p>
 
-    <a href="https://aolt.in/883226" class="button" target="_blank">23–25, Register now</a>
+    <a href="https://www.artofliving.online/registration.php?event_id=883226" class="button" target="_blank">25–27, Register now</a>
 
     <ul class="features">
       <li>To calm anxiety</li>
@@ -254,7 +254,7 @@
     <p class="subtitle">with Vishal Merani</p>
     <h3>Lapse into meditation in minutes</h3>
     <p class="subtitle">Feel Good 😌 Live Light 🪶</p>
-    <a href="https://www.artofliving.org/in-en/program/883701/" class="button" target="_blank">June 28-30, Register here</a>
+    <a href="https://www.artofliving.online/registration.php?event_id=883701" class="button" target="_blank">June 28-30, Register here</a>
     <ul class="features">
       <li>⤷ Personal</li>
       <li>⤷ Customized</li>
