--- a/index.html
+++ b/index.html
@@ -186,19 +186,19 @@
     </ul>
 
     <ul class="timeline">
-      <li>Time: 7:30 PM – 10:00 PM</li>
+      <li>Time: 7:00 PM – 9:30 PM</li>
       <li><strong>📍 Zoom | Online</strong></li>
     </ul>
 
     <h4>Queries & help @ 9818503888</h4>
 
     <div class="copy-box">
-      <input class="copy-input" type="text" value="Deep Sleep & Anxiety Relief | 23–25 June 2025 | https://aolt.in/883226 | Help: 9818503888" id="copyText1" readonly>
+      <input class="copy-input" type="text" value="Deep Sleep & Anxiety Relief | 25–27 June 2025 | https://aolt.in/883226 | Help: 9818503888" id="copyText1" readonly>
       <button class="copy-btn" onclick="copyToClipboard('copyText1', this)">Copy</button>
       <a class="wa-icon" target="_blank" id="waLink1" title="Share on WhatsApp"></a>
     </div>
 
-    <div class="footer">💤 23–25 June 2025 | Evening ♡ Online Sessions <br>
+    <div class="footer">💤 25–27 June 2025 | Evening ♡ Online Sessions <br>
 ॐ  Jai Guru Dev ॐ
 </div>
   </div>
@@ -274,7 +274,7 @@
       <a class="wa-icon" target="_blank" id="waLink3" title="Share on WhatsApp"></a>
     </div>
 
-    <div class="footer"> 😌 3 days only | Pick a Week | ♡ Online Sessions <br>
+    <div class="footer"> 😌 3 days only | June 28-30 or Pick a Week | ♡ Online Sessions <br>
 ॐ  Jai Guru Dev ॐ
 </div>
   </div>
