--- a/index.html
+++ b/index.html
@@ -254,8 +254,9 @@
     <p class="subtitle">with Vishal Merani</p>
     <h3>Lapse into meditation in minutes</h3>
     <p class="subtitle">Feel Good 😌 Live Light 🪶</p>
-    <a href="https://www.artofliving.online/registration.php?event_id=883701" class="button" target="_blank">June 28-30, Register here</a>
+    <a href="https://www.artofliving.online/registration.php?event_id=883701" class="button" target="_blank">July 01-03, Register here</a>
     <ul class="features">
+  <li>Time: 7:00 PM – 9:30 PM</li>
       <li>⤷ Personal</li>
       <li>⤷ Customized</li>
       <li>⤷ Yours</li>
@@ -274,7 +275,7 @@
       <a class="wa-icon" target="_blank" id="waLink3" title="Share on WhatsApp"></a>
     </div>
 
-    <div class="footer"> 😌 3 days only | June 28-30 or Pick a Week | ♡ Online Sessions <br>
+    <div class="footer"> 😌 3 days only | July 01-03 or Pick a Week | ♡ Online Sessions <br>
 ॐ  Jai Guru Dev ॐ
 </div>
   </div>
