--- a/index.html
+++ b/index.html
@@ -254,9 +254,8 @@
     <p class="subtitle">with Vishal Merani</p>
     <h3>Lapse into meditation in minutes</h3>
     <p class="subtitle">Feel Good 😌 Live Light 🪶</p>
-    <a href="https://www.artofliving.online/registration.php?event_id=883701" class="button" target="_blank">July 01-03, Register here</a>
+    <a href="https://www.artofliving.online/registration.php?event_id=883701" class="button" target="_blank">July 01-03, 7a-9a IST, Register here</a>
     <ul class="features">
-  <li>Time: 7:00 PM – 9:30 PM</li>
       <li>⤷ Personal</li>
       <li>⤷ Customized</li>
       <li>⤷ Yours</li>
