--- a/index.html
+++ b/index.html
@@ -166,6 +166,17 @@
       margin-top: 1.8rem;
     }
   </style>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QL72FZ9YZ2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QL72FZ9YZ2');
+</script>
+
 </head>
 <body>
 
