--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
       <a class="wa-icon" target="_blank" id="waLink3" title="Share on WhatsApp"></a>
     </div>
 
-    <div class="footer"> ♡ Online & Offline Sessions <br>
+    <div class="footer"> 🌀🔮🌌 ♡ Online & Offline Sessions <br>
 ॐ  Jai Guru Dev ॐ
 </div>
   </div>
@@ -345,7 +345,7 @@
       <a class="wa-icon" target="_blank" id="waLink3" title="Share on WhatsApp"></a>
     </div>
 
-    <div class="footer"> ♡  Offline Sessions Only <br>
+    <div class="footer"> 🩹⚡ ♡  Offline Sessions Only <br>
 ॐ  Jai Guru Dev ॐ
 </div>
   </div>
