--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
     </ul>
 
     <ul class="timeline">
-      <li>Happening every week</li>
+      <li>Follow-ups Happening every week</li>
       <li><strong>📍 Zoom | Online</strong></li>
     </ul>
 
@@ -285,7 +285,7 @@
       <a class="wa-icon" target="_blank" id="waLink3" title="Share on WhatsApp"></a>
     </div>
 
-    <div class="footer"> 😌 3 days only | July 01-03 or Pick a Week | ♡ Online Sessions <br>
+    <div class="footer"> 😌 3 days, 2 hours a day | ♡ Online Sessions <br>
 ॐ  Jai Guru Dev ॐ
 </div>
   </div>
