Happening monthly-ish, tops

--- a/index.html
+++ b/index.html
@@ -273,7 +273,8 @@
     </ul>
 
     <ul class="timeline">
-      <li>Follow-ups Happening every week</li>
+      <li>Happening monthly-ish, tops</li>
+      <li>We'll touch base regularly, join our whatsapp group</li> 
       <li><strong>📍 Zoom | Online</strong></li>
     </ul>
 
