--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 
     <ul class="timeline">
       <li>Happening monthly-ish, tops</li>
-      <li>We'll touch base regularly, join our whatsapp group</li> 
+      <li>We'll touch base regularly, join whatsapp 💬 </li> 
       <li><strong>📍 Zoom | Online</strong></li>
     </ul>
 
