--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     <h3>Stress, Sleep, Anxiety</h3>
     <p class="subtitle">Stop struggling! Decode and conquer</p>
 
-    <a href="https://www.artofliving.online/registration.php?event_id=883226" class="button" target="_blank">25–27, Register now</a>
+    <a href="https://www.artofliving.online/registration.php?event_id=883226" class="button" target="_blank">June 25–27, Register now</a>
 
     <ul class="features">
       <li>To calm anxiety</li>
@@ -222,7 +222,7 @@
     <h3>Hyper Detox with Sudarshan Kriya</h3>
     <p class="subtitle">In person | English, Hindi</p>
 
-    <a href="https://programs.vvmvp.org/events/553/" class="button" target="_blank">25–27, Register here</a>
+    <a href="https://programs.vvmvp.org/events/553/" class="button" target="_blank"> July 25–27, Register here</a>
 
     <ul class="timeline">
       <li>24 Jul – Check-in after noon</li>
