--- a/index.html
+++ b/index.html
@@ -165,6 +165,43 @@
       text-align: center;
       margin-top: 1.8rem;
     }
+
+.iphone-frame {
+  position: relative;
+  z-index: 1;
+  border: 1px solid var(--border);
+  border-radius: 36px;
+  overflow: hidden;
+}
+
+.iphone-frame::before {
+  content: "";
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  right: -2px;
+  bottom: -2px;
+  z-index: -1;
+  border-radius: 40px;
+  background: linear-gradient(45deg, #9089f5, #f093fb, #9089f5);
+  background-size: 300% 300%;
+  animation: neonBorder 6s ease-in-out infinite;
+  filter: blur(10px);
+  opacity: 0.6;
+}
+
+@keyframes neonBorder {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
   </style>
 
 <!-- Google tag (gtag.js) -->
