--- a/index.html
+++ b/index.html
@@ -391,6 +391,15 @@
     <div class="footer"> 🩹⚡ ♡  Offline Sessions Only <br>
 ॐ  Jai Guru Dev ॐ
 </div>
+
+<!-- Card 6 - Image Only -->
+<div class="iphone-frame">
+  <img src="zenvm.png" alt="Program Image" style="width: 100%; border-radius: 20px;" />
+  <div class="footer">
+    
+  </div>
+</div>
+
   </div>
   
   <script>
