--- a/index.html
+++ b/index.html
@@ -394,9 +394,8 @@
   </div>
 
 <!-- Card 6 - Image Only -->
-<div class="iphone-frame">
-  <img src="zenvm.png" alt="Program Image" style="width: 100%; border-radius: 20px;" />
-  <div class="footer">
+<div class="iphone-frame" style="padding: 0; border: none; box-shadow: none;">
+  <img src="zenvm.png" alt="Meditation Image" style="width: 100%; border-radius: 20px;"/>
     
   </div>
 </div>
