--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 
   <!-- Card 3 -->
   <div class="iphone-frame">
-    <h1>Monthly,</h1>
+    <h1>mostly Monthly,</h1>
     <h2>Online</h2>
     <p class="subtitle">with Vishal Merani</p>
     <h3>Lapse into meditation in minutes</h3>
