--- a/index.html
+++ b/index.html
@@ -415,5 +415,35 @@
       waLink.href = `https://wa.me/?text=${msg}`;
     }
   </script>
+
+<!-- Dark Mode Toggle Button -->
+<div id="theme-toggle" title="Toggle dark/light mode" style="
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  font-size: 1.5rem;
+  cursor: pointer;
+  z-index: 999;
+  transition: transform 0.3s ease;
+  text-shadow: 0 0 8px #9089f5;
+">
+  🌙
+</div>
+
+<script>
+  const toggle = document.getElementById("theme-toggle");
+  let isDark = false;
+
+  toggle.addEventListener("click", () => {
+    isDark = !isDark;
+    document.documentElement.style.setProperty('--bg', isDark ? '#1c1c1e' : '#f4f6f9');
+    document.documentElement.style.setProperty('--text', isDark ? '#f9fafc' : '#1c1c1e');
+    document.documentElement.style.setProperty('--box-bg', isDark ? '#2c2c2e' : '#ffffff');
+    document.documentElement.style.setProperty('--border', isDark ? '#555' : '#d9e1ec');
+    document.documentElement.style.setProperty('--muted', isDark ? '#aaa' : '#777');
+    toggle.textContent = isDark ? '🌑' : '🌙';
+  });
+</script>
+
 </body>
 </html>
