--- a/index.html
+++ b/index.html
@@ -220,7 +220,24 @@
 </script>
 
 </head>
+
 <body>
+
+<!-- Moon Toggle (Vector style) -->
+<div id="mode-toggle" style="
+  position: relative;
+  width: 100%;
+  max-width: 390px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: flex-end;
+  padding: 16px 22px;
+">
+  <svg id="moon-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="#9089f5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-moon" style="cursor: pointer; transition: transform 0.3s ease;">
+    <path d="M21 12.79A9 9 0 0112.21 3a7 7 0 100 14.58A9 9 0 0021 12.79z"/>
+  </svg>
+</div>
+
 
   <!-- Card 1 -->
   <div class="iphone-frame">
@@ -416,32 +433,38 @@
     }
   </script>
 
-<!-- Dark Mode Toggle Button -->
-<div id="theme-toggle" title="Toggle dark/light mode" style="
-  position: fixed;
-  top: 20px;
-  right: 20px;
-  font-size: 1.5rem;
-  cursor: pointer;
-  z-index: 999;
-  transition: transform 0.3s ease;
-  text-shadow: 0 0 8px #9089f5;
-">
-  🌙
-</div>
-
 <script>
-  const toggle = document.getElementById("theme-toggle");
-  let isDark = false;
+  const moonIcon = document.getElementById("moon-icon");
+  let darkMode = false;
 
-  toggle.addEventListener("click", () => {
-    isDark = !isDark;
-    document.documentElement.style.setProperty('--bg', isDark ? '#1c1c1e' : '#f4f6f9');
-    document.documentElement.style.setProperty('--text', isDark ? '#f9fafc' : '#1c1c1e');
-    document.documentElement.style.setProperty('--box-bg', isDark ? '#2c2c2e' : '#ffffff');
-    document.documentElement.style.setProperty('--border', isDark ? '#555' : '#d9e1ec');
-    document.documentElement.style.setProperty('--muted', isDark ? '#aaa' : '#777');
-    toggle.textContent = isDark ? '🌑' : '🌙';
+  moonIcon.addEventListener("click", () => {
+    darkMode = !darkMode;
+
+    document.documentElement.style.setProperty('--bg', darkMode ? '#1c1c1e' : '#f4f6f9');
+    document.documentElement.style.setProperty('--text', darkMode ? '#f5f5f5' : '#1c1c1e');
+    document.documentElement.style.setProperty('--muted', darkMode ? '#aaa' : '#777');
+    document.documentElement.style.setProperty('--border', darkMode ? '#444' : '#d9e1ec');
+    document.documentElement.style.setProperty('--box-bg', darkMode ? '#2c2c2e' : '#ffffff');
+
+    // Update accent and button contrast for dark
+    document.querySelectorAll('.button').forEach(btn => {
+      btn.style.backgroundColor = darkMode ? '#8473c6' : 'var(--accent)';
+      btn.style.color = darkMode ? '#fff' : 'white';
+    });
+
+    // Update input backgrounds
+    document.querySelectorAll('.copy-input').forEach(input => {
+      input.style.backgroundColor = darkMode ? '#3a3a3c' : '#f9fafc';
+      input.style.color = darkMode ? '#f5f5f5' : '#1c1c1e';
+    });
+
+    document.querySelectorAll('.copy-btn').forEach(btn => {
+      btn.style.backgroundColor = darkMode ? '#555' : '#E6E6FA';
+      btn.style.color = darkMode ? '#eee' : '#333';
+    });
+
+    // Optional: rotate the moon icon on toggle
+    moonIcon.style.transform = darkMode ? "rotate(180deg)" : "rotate(0deg)";
   });
 </script>
 
