--- a/index.html
+++ b/index.html
@@ -207,6 +207,11 @@
   }
 }
 
+.copy-input, .copy-btn {
+  transition: background 0.3s, color 0.3s;
+}
+
+
   </style>
 
 <!-- Google tag (gtag.js) -->
