--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
     darkMode = !darkMode;
 
     document.documentElement.style.setProperty('--bg', darkMode ? '#1c1c1e' : '#f4f6f9');
-    document.documentElement.style.setProperty('--text', darkMode ? '#f5f5f5' : '#1c1c1e');
+    document.documentElement.style.setProperty('--text', darkMode ? '#b69ad4' : '#1c1c1e');
     document.documentElement.style.setProperty('--muted', darkMode ? '#aaa' : '#777');
     document.documentElement.style.setProperty('--border', darkMode ? '#444' : '#d9e1ec');
     document.documentElement.style.setProperty('--box-bg', darkMode ? '#2c2c2e' : '#ffffff');
@@ -460,7 +460,7 @@
     // Update input backgrounds
     document.querySelectorAll('.copy-input').forEach(input => {
       input.style.backgroundColor = darkMode ? '#3a3a3c' : '#f9fafc';
-      input.style.color = darkMode ? '#f5f5f5' : '#1c1c1e';
+      input.style.color = darkMode ? '#b69ad4' : '#1c1c1e';
     });
 
     document.querySelectorAll('.copy-btn').forEach(btn => {
