#6a5795 dark mode botton color

--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
 
     // Update accent and button contrast for dark
     document.querySelectorAll('.button').forEach(btn => {
-      btn.style.backgroundColor = darkMode ? '#8473c6' : 'var(--accent)';
+      btn.style.backgroundColor = darkMode ? '#6a5795' : 'var(--accent)';
       btn.style.color = darkMode ? '#1c1c1e' : 'white';
       
 
