--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     }
 
     .copy-btn:hover {
-      background-color: #8473c6;
+      background-color: #6a5795;
       color: white;
     }
 
