--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
     .copy-btn {
       padding: 8px 12px;
-      background-color: #E6E6FA;
+      background-color: #6a5799;
       color: #333;
       font-size: 0.75rem;
       font-weight: 600;
