--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       --text: #1c1c1e;
       --muted: #777;
       --border: #d9e1ec;
-      --accent: #9089f5;
+      --accent: #6a5799;
       --accent-hover: #8473c6;
       --box-bg: #ffffff;
     }
