--- a/beta/index.html
+++ b/beta/index.html
@@ -38,7 +38,7 @@
       box-shadow: 0 8px 30px rgba(0, 0, 0, 0.08);
       padding: 30px 22px;
       border: 1px solid var(--border);
-    } /* toka */
+    } /* toke toka */
 
     h1 {
       font-size: 1.4rem;
