--- a/beta/index.html
+++ b/beta/index.html
@@ -20,7 +20,7 @@
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-    }
+    } /*toka */
 
     body {
       font-family: 'Inter', sans-serif;
