Update index.html after removing custom domain in pages

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   } else if (host === "hp.vishalmerani.com") {
     location.href = "/hp/";
   } // etc...
-</script>
+</script> 
 
 
   <meta charset="UTF-8" />
@@ -221,7 +221,7 @@
   50% {
     opacity: 0.4;
   }
-}
+} /* hi toks */ 
 
   </style>
 
