--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
     <h3>Stress, Sleep, Anxiety</h3>
     <p class="subtitle">Stop struggling! Decode and conquer</p>
 
-    <a href="https://www.artofliving.online/registration.php?event_id=883226" class="button" target="_blank">June 25–27, Register now</a>
+    <a href="https://www.artofliving.online/registration.php?event_id=883226" class="button" target="_blank"> Booked, see you soon </a>
 
     <ul class="features">
       <li>To calm anxiety</li>
@@ -278,7 +278,40 @@
 </div>
   </div>
 
-  <!-- Card 2 -->
+<!-- Card 2.1 -->
+  <div class="iphone-frame">
+    <h1>This July,</h1>
+    <h2>Happiness Program</h2>
+    <p class="subtitle">with Vishal Merani & Anurag Kukreja</p>
+    <h3>Hyper Detox with Sudarshan Kriya</h3>
+    <p class="subtitle"> In person | English, Hindi</p>
+
+    <a href="https://programs.vvmvp.org/events/882303/“ class="button" target="_blank"> July 04–06, Register here</a>
+
+    <ul class="timeline">
+      <li>04 Jul – Check-in, 5:50 AM</li>
+      <li><strong>05, 06 Jul</strong> – 6:00 AM to 9:00 AM</li>
+    </ul>
+
+    <h5> Free repeats anywhere in India </h5>
+
+    <ul class="timeline">
+      <li><strong>📍Aerobics Room, Galaxy Club, Brigade Gateway, Rajajinagar, Bangalore North, 560055 </strong></li>
+    </ul>
+
+    <h4>Queries & help @ 9818503888</h4>
+
+    <div class="copy-box">
+      <input class="copy-input" type="text" value="Happiness Program | 04–06 July 2025 | https://programs.vvmvp.org/events/882303 | Help: 9818503888" id="copyText2" readonly>
+      <button class="copy-btn" onclick="copyToClipboard('copyText2', this)">Copy</button>
+      <a class="wa-icon" target="_blank" id="waLink2" title="Share on WhatsApp"></a>
+    </div>
+
+    <div class="footer">🦦🤌🏻 Starts 04 July 2025 | Bangalore ♡ <br>
+ॐ  Jai Guru Dev ॐ
+</div>
+  </div>
+  <!-- Card 2.2 -->
   <div class="iphone-frame">
     <h1>This July,</h1>
     <h2>Happiness Program</h2>
