--- a/index.html
+++ b/index.html
@@ -286,11 +286,10 @@
     <h3>Hyper Detox with Sudarshan Kriya</h3>
     <p class="subtitle"> In person | English, Hindi</p>
 
-    <a href="https://programs.vvmvp.org/events/882303/“ class="button" target="_blank"> July 04–06, Register here</a>
+    <a href="https://www.artofliving.org/in-en/program/882303" class="button" target="_blank"> Booked, see you soon </a>
 
     <ul class="timeline">
-      <li>04 Jul – Check-in, 5:50 AM</li>
-      <li><strong>05, 06 Jul</strong> – 6:00 AM to 9:00 AM</li>
+      <li><strong> 04, 05, 06 Jul</strong> – 6:00 AM to 9:00 AM</li>
     </ul>
 
     <h5> Free repeats anywhere in India </h5>
