--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
     <h3>Hyper Detox with Sudarshan Kriya</h3>
     <p class="subtitle"> In person | English, Hindi</p>
 
-    <a href="https://www.artofliving.org/in-en/program/882303" class="button" target="_blank"> Booked, see you soon </a>
+    <a href="https://www.artofliving.org/in-en/program/882303" class="button" target="_blank"> July 04–06, Register here </a>
 
     <ul class="timeline">
       <li><strong> 04, 05, 06 Jul</strong> – 6:00 AM to 9:00 AM</li>
@@ -361,7 +361,11 @@
     <p class="subtitle">with Vishal Merani</p>
     <h3>Lapse into meditation in minutes</h3>
     <p class="subtitle">Feel Good 😌 Live Light 🪶</p>
+    <li>⤷ Morning </li>
     <a href="https://www.artofliving.online/registration.php?event_id=883701" class="button" target="_blank">July 01-03, 7a-9a IST, Register here</a>
+    <li>⤷ Evening </li>    
+   <a href="https://www.artofliving.org/in-en/program/876667" class="button" target="_blank">July 13-15, 7p-9p IST, Register here</a>
+
     <ul class="features">
       <li>⤷ Personal</li>
       <li>⤷ Customized</li>
