--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
     <h5> Free repeats anywhere in India </h5>
 
     <ul class="timeline">
-      <li><strong>📍Aerobics Room, Galaxy Club, Brigade Gateway, Rajajinagar, Bangalore North, 560055 </strong></li>
+      <li> 📍 Aerobics Room, Galaxy Club, Brigade Gateway, Rajajinagar, Bangalore North, 560055</li>
     </ul>
 
     <h4>Queries & help @ 9818503888</h4>
