--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
     darkMode = !darkMode;
 
     document.documentElement.style.setProperty('--bg', darkMode ? '#1c1c1e' : '#f4f6f9');
-    document.documentElement.style.setProperty('--text', darkMode ? '#b69ad4' : '#1c1c1e');
+    document.documentElement.style.setProperty('--text', darkMode ? '#e0e0e0' : '#1c1c1e');
     document.documentElement.style.setProperty('--muted', darkMode ? '#aaa' : '#777');
     document.documentElement.style.setProperty('--border', darkMode ? '#444' : '#d9e1ec');
     document.documentElement.style.setProperty('--box-bg', darkMode ? '#2c2c2e' : '#ffffff');
