--- a/index.html
+++ b/index.html
@@ -211,8 +211,14 @@
   transition: background 0.3s, color 0.3s;
 }
 
-    .location-text, .queries-text {
+.location-text, .queries-text {
   color: var(--location-color);
+}
+
+body.dark h1,
+body.dark h2,
+body.dark h3 {
+  color: #b69ad4;
 }
 
 
@@ -486,7 +492,7 @@
 
   moonIcon.addEventListener("click", () => {
     darkMode = !darkMode;
-
+    document.body.classList.toggle("dark", darkMode);
     document.documentElement.style.setProperty('--bg', darkMode ? '#1c1c1e' : '#f4f6f9');
     document.documentElement.style.setProperty('--text', darkMode ? '#e0e0e0' : '#1c1c1e');
     document.documentElement.style.setProperty('--location-color', darkMode ? '#b69ad4' : '#555');
